Oh my god it's working i'm so happy

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,8 +8,7 @@
   <body>
     <h1>Todo List App</h1>
     <form>
-      <label for="new-todo"
-        >New Todo:
+      <label for="new-todo" >New Todo:
         <input type="text" id="new-todo" name="new-todo" />
       </label>
       <button id="add-todo">Add</button>
